--- a/app/src/main/res/layout/ingediant_row.xml
+++ b/app/src/main/res/layout/ingediant_row.xml
@@ -14,19 +14,18 @@
     app:cardElevation="4dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@android:color/transparent"
-        android:padding="16dp"> <!-- Add this line -->
+        android:background="@android:color/transparent"> <!-- Add this line -->
 
         >
 
         <!-- ImageView for ingredient -->
         <ImageView
             android:id="@+id/ingredient_image"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_marginBottom="18dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
             android:scaleType="centerCrop"
             android:src="@drawable/ic_launcher_background"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -39,13 +38,13 @@
             android:id="@+id/ingredient_field"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_margin="10dp"
             android:text="@string/ingredientName"
-            android:textSize="18sp"
-            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/ingredient_image" />
+            app:layout_constraintTop_toBottomOf="@id/ingredient_image"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
