--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -9,8 +9,8 @@
 
     <ScrollView
         android:id="@+id/searc_scrollView"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -19,33 +19,62 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="10dp">
+            >
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/header_card_view"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="0dp"
+                app:cardCornerRadius="16dp"
+                app:cardElevation="4dp"
+                app:cardBackgroundColor="@color/colorPrimaryDark"
+                app:layout_constraintTop_toTopOf="parent">
+
+                <!-- Header Content -->
+                <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="5dp">
+
+                    <!-- Header Title -->
+
+                    <!-- Optional: Add a Header Icon -->
+
+                    <EditText
+                        android:id="@+id/searchForMeal_field"
+                        android:background="@color/white"
+                        android:layout_width="0dp"
+                        android:layout_height="50dp"
+                        android:layout_marginTop="5dp"
+                        android:hint="@string/search"
+                        android:inputType="text"
+                        android:padding="8dp"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintWidth_percent="0.75"
+                        app:layout_constraintStart_toEndOf="@id/header_icon"
+                        tools:layout_editor_absoluteX="5dp" />
+
+                    <ImageView
+                        android:id="@+id/header_icon"
+                        android:layout_width="81dp"
+                        android:layout_height="56dp"
+                        android:layout_marginStart="11dp"
+                        android:layout_marginEnd="28dp"
+                        android:src="@drawable/search__2_"
+                        app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/searchForMeal_field"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintVertical_bias="1.0" />
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
+            </com.google.android.material.card.MaterialCardView>
 
             <!-- EditText for Search Input -->
-            <EditText
-                android:id="@+id/searchForMeal_field"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="30dp"
-                android:hint="@string/search"
-                android:inputType="text"
-                android:padding="8dp"
-                app:layout_constraintEnd_toStartOf="@+id/searchForMeal_button"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.75" />
 
-            <!-- Search Button -->
-            <Button
-                android:id="@+id/searchForMeal_button"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="30dp"
-                android:text="@string/search"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/searchForMeal_field"
-                app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintWidth_percent="0.25" />
+
 
             <!-- TextView for Filter By -->
             <TextView
@@ -58,7 +87,7 @@
                 android:textSize="16sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/searchForMeal_button" />
+                app:layout_constraintTop_toBottomOf="@id/header_card_view" />
 
             <!-- Chip Group for Filters -->
             <com.google.android.material.chip.ChipGroup
