--- a/app/src/main/res/layout/fragment_sign_up_fragment.xml
+++ b/app/src/main/res/layout/fragment_sign_up_fragment.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/back_3"
     android:padding="16dp">
 
     <!-- Edit Button Positioned Above Profile Image -->
@@ -18,6 +19,7 @@
         android:layout_height="40dp"
         android:layout_marginEnd="16dp"
         android:background="@android:color/transparent"
+        android:backgroundTint="#FFFFFF"
         android:scaleType="centerCrop"
         android:src="@drawable/editicon"
         app:layout_constraintEnd_toEndOf="parent"
@@ -44,6 +46,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
+        android:background="@color/white"
         android:hint="Username"
         android:inputType="text"
         android:minHeight="48dp"
@@ -58,10 +61,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:padding="16dp"
+        android:background="@color/white"
         android:hint="Email"
         android:inputType="textEmailAddress"
         android:minHeight="48dp"
+        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/userNameField" />
@@ -72,10 +76,11 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:padding="16dp"
+        android:background="@color/white"
         android:hint="Password"
         android:inputType="textPassword"
         android:minHeight="48dp"
+        android:padding="16dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/emailField" />
@@ -85,8 +90,8 @@
         android:id="@+id/signUpButton"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
         android:layout_marginHorizontal="16dp"
+        android:layout_marginTop="32dp"
         android:text="Sign Up"
         app:cornerRadius="8dp"
         app:iconPadding="8dp"
