--- a/app/src/main/res/layout/plan_row.xml
+++ b/app/src/main/res/layout/plan_row.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:padding="16dp">
+        >
 
         <TextView
             android:id="@+id/plan_day_Name"
@@ -39,14 +39,13 @@
                 android:layout_height="wrap_content">
 
                 <ImageView
-                    android:id="@+id/plan_image_meal"
+                    android:id="@+id/favorite_meal_image"
                     android:layout_width="match_parent"
-                    android:layout_height="170dp"
+                    android:layout_height="200dp"
                     android:adjustViewBounds="true"
                     android:contentDescription="@null"
                     android:foreground="#30000000"
                     android:scaleType="fitXY"
-                    android:src="@drawable/food"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
                     app:layout_constraintStart_toStartOf="parent"
@@ -69,32 +68,23 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/plan_image_meal"
+                    app:layout_constraintTop_toBottomOf="@+id/favorite_meal_image"
                     tools:text="Meal Name" />
 
-                <ImageView
-                    android:id="@+id/plan_favorite_icon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="12dp"
-                    android:layout_marginEnd="16dp"
-                    android:background="@android:color/transparent"
-                    android:src="@drawable/favoriteicon"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <ImageView
+                <com.google.android.material.floatingactionbutton.FloatingActionButton
                     android:id="@+id/delete_plan_icon"
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginTop="4dp"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="32dp"
+                    android:layout_marginEnd="5dp"
                     android:background="@android:color/transparent"
                     android:src="@drawable/deleteicon"
-                    app:layout_constraintEnd_toEndOf="@id/plan_favorite_icon"
-                    app:layout_constraintTop_toBottomOf="@+id/plan_favorite_icon" />
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:rippleColor="@color/colorPrimary" />
 
                 <TextView
-                    android:id="@+id/plan_category_Name"
+                    android:id="@+id/favorite_meal_category"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
@@ -102,7 +92,7 @@
                     android:text="@string/category_Name"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="@id/plan_image_meal"
+                    app:layout_constraintBottom_toBottomOf="@id/favorite_meal_image"
                     app:layout_constraintStart_toStartOf="parent" />
 
                 <TextView
@@ -113,9 +103,9 @@
                     android:text="@string/contry_name"
                     android:textColor="@color/white"
                     android:textSize="18sp"
-                    app:layout_constraintBottom_toBottomOf="@id/plan_category_Name"
+                    app:layout_constraintBottom_toBottomOf="@id/favorite_meal_category"
                     app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="@id/plan_category_Name" />
+                    app:layout_constraintTop_toTopOf="@id/favorite_meal_category" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </LinearLayout>
