--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -5,160 +5,144 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    >
+    tools:context=".YourActivity">
 
-    <ScrollView
-        android:id="@+id/searc_scrollView"
+    <!-- Header Section -->
+    <com.google.android.material.card.MaterialCardView
+        android:id="@+id/header_card_view"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="wrap_content"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="4dp"
+        app:cardBackgroundColor="@color/colorPrimaryDark"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="8dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            >
+            android:padding="8dp">
 
-            <com.google.android.material.card.MaterialCardView
-                android:id="@+id/header_card_view"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_margin="0dp"
-                app:cardCornerRadius="16dp"
-                app:cardElevation="4dp"
-                app:cardBackgroundColor="@color/colorPrimaryDark"
-                app:layout_constraintTop_toTopOf="parent">
-
-                <!-- Header Content -->
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:padding="5dp">
-
-                    <!-- Header Title -->
-
-                    <!-- Optional: Add a Header Icon -->
-
-                    <EditText
-                        android:id="@+id/searchForMeal_field"
-                        android:background="@color/white"
-                        android:layout_width="0dp"
-                        android:layout_height="50dp"
-                        android:layout_marginTop="5dp"
-                        android:hint="@string/search"
-                        android:inputType="text"
-                        android:padding="8dp"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintWidth_percent="0.75"
-                        app:layout_constraintStart_toEndOf="@id/header_icon"
-                        tools:layout_editor_absoluteX="5dp" />
-
-                    <ImageView
-                        android:id="@+id/header_icon"
-                        android:layout_width="81dp"
-                        android:layout_height="56dp"
-                        android:layout_marginStart="11dp"
-                        android:layout_marginEnd="28dp"
-                        android:src="@drawable/search__2_"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/searchForMeal_field"
-                        app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintVertical_bias="1.0" />
-
-                </androidx.constraintlayout.widget.ConstraintLayout>
-
-            </com.google.android.material.card.MaterialCardView>
-
-            <!-- EditText for Search Input -->
-
-
-
-            <!-- TextView for Filter By -->
-            <TextView
-                android:id="@+id/filterBy_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingStart="8dp"
-                android:paddingTop="16dp"
-                android:text="@string/filterBy"
-                android:textSize="16sp"
-                android:textStyle="bold"
+            <ImageView
+                android:id="@+id/header_icon"
+                android:layout_width="81dp"
+                android:layout_height="56dp"
+                android:src="@drawable/search__2_"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/header_card_view" />
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginEnd="8dp"/>
 
-            <!-- Chip Group for Filters -->
-            <com.google.android.material.chip.ChipGroup
-                android:id="@+id/chip_group"
+            <EditText
+                android:id="@+id/searchForMeal_field"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="8dp"
+                android:layout_height="50dp"
+                android:background="@color/white"
+                android:hint="@string/search"
+                android:inputType="text"
+                android:padding="8dp"
+                app:layout_constraintStart_toEndOf="@id/header_icon"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/filterBy_text">
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </com.google.android.material.card.MaterialCardView>
 
-                <!-- Chip for Categories -->
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/category_chip"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/categories"
-                    app:closeIconVisible="false" />
+    <!-- Filter Section -->
+    <TextView
+        android:id="@+id/filterBy_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/filterBy"
+        android:textSize="16sp"
+        android:textStyle="bold"
+        app:layout_constraintTop_toBottomOf="@id/header_card_view"
+        app:layout_constraintStart_toStartOf="parent"
+        android:paddingStart="16dp"
+        android:paddingTop="8dp"
+        android:paddingBottom="8dp"/>
 
-                <!-- Chip for Countries -->
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/countries_chip"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/countries"
-                    app:closeIconVisible="false" />
+    <com.google.android.material.chip.ChipGroup
+        android:id="@+id/chip_group"
+        android:layout_width="0dp"
+        app:singleSelection="true"
 
-                <!-- Chip for Ingredients -->
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/ingrediants_chip"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/ingrediants"
-                    app:closeIconVisible="false" />
+    android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/filterBy_text"
+        android:paddingStart="16dp"
+        android:paddingEnd="16dp">
 
-                <!-- Chip for Meal Name -->
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/meal_name_chip"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/mealName"
-                    app:closeIconVisible="false" />
+        <com.google.android.material.chip.Chip
+            android:id="@+id/category_chip"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/categories"
+            app:closeIconVisible="false"/>
 
-                <!-- Chip for Meal ID -->
-                <com.google.android.material.chip.Chip
-                    android:id="@+id/meal_id_chip"
-                    style="@style/Widget.MaterialComponents.Chip.Choice"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/meal_id"
-                    app:closeIconVisible="false" />
-            </com.google.android.material.chip.ChipGroup>
+        <com.google.android.material.chip.Chip
+            android:id="@+id/countries_chip"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/countries"
+            app:closeIconVisible="false"/>
 
-            <!-- RecyclerView for Search Results -->
+        <com.google.android.material.chip.Chip
+            android:id="@+id/ingrediants_chip"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/ingrediants"
+            app:closeIconVisible="false"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/meal_name_chip"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/mealName"
+            app:closeIconVisible="false"/>
+
+        <com.google.android.material.chip.Chip
+            android:id="@+id/meal_id_chip"
+            style="@style/Widget.MaterialComponents.Chip.Choice"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/meal_id"
+            app:closeIconVisible="false"/>
+    </com.google.android.material.chip.ChipGroup>
+
+    <!-- Scrollable Content Section -->
+    <ScrollView
+        android:id="@+id/searc_scrollView"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/chip_group"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/mealSearchRecycler"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/chip_group" />
-
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
-
     </ScrollView>
 
+    <!-- No Internet Animation -->
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/no_internet"
         style="@style/LottieAnimation"
@@ -166,10 +150,9 @@
         android:layout_height="match_parent"
         android:layout_gravity="center"
         android:visibility="gone"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:lottie_rawRes="@raw/no_internet" />
-
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:lottie_rawRes="@raw/no_internet"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
